[package]
name = "insights_core_updater"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
simplelog = "0.12.2"
time = "0.3.36"
reqwest = "0.12.9"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
http = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1.8.0"